--- a/style.css
+++ b/style.css
@@ -127,6 +127,8 @@ li > input {
 }
 
 li > span {
+  display: block;
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
+  font-weight: 400;
 }
