--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ ul {
 li {
   width: 300px;
   min-height: 48px;
-  padding: 0 16px;
+  padding: 8px 16px;
   margin: 8px 0;
   display: flex;
   align-items: center;
@@ -127,8 +127,8 @@ li > input {
 }
 
 li > span {
-  display: block;
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-weight: 400;
+  word-wrap: break-word;
 }
