--- a/style.css
+++ b/style.css
@@ -130,5 +130,5 @@ li > span {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   font-weight: 400;
-  word-wrap: break-word;
+  word-break: break-word;
 }
